--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,7 @@
-.App {
-  text-align: center;
+main {
+    /*background: linear-gradient(337deg, rgba(7,152,222,1) 20%, rgba(0,142,230,1) 26%, rgba(35,130,255,1) 46%, rgba(26,134,224,1) 59%, rgba(6,145,212,1) 76%, rgba(0,212,255,1) 94%);*/
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.custom-font{
+    font-family: JosefinSans, serif;
 }
