Created new Logo for main page
Created new logo: CitiAid with new custom font

--- a/src/components/MainContent/MainContent.css
+++ b/src/components/MainContent/MainContent.css
@@ -1,3 +1,9 @@
+.logo #logo-a{
+    left: 4rem;
+    bottom: 0.2rem;
+    font-weight: bolder;
+}
+
 .scroll-container,
 .scroll-area {
     max-width: inherit;
