--- a/src/components/MainContent/MainContent.css
+++ b/src/components/MainContent/MainContent.css
@@ -1,9 +1,3 @@
-.logo #logo-a{
-    left: 4rem;
-    bottom: 0.2rem;
-    font-weight: bolder;
-}
-
 .scroll-container,
 .scroll-area {
     max-width: inherit;
@@ -58,16 +52,9 @@
     background-image: url('../../assets/sec4_full.png');
 }
 
-#welcome-sec{
-    padding: 2rem;
-}
-
-#welcome-sec > * {
-    margin-bottom: 1rem;
-}
 
 #welcome-sec > *:last-child{
-    margin-top: 1rem;
+    margin-top: 0.5rem;
 }
 
 #welcome-sec-btn,
@@ -81,6 +68,21 @@
 
 #welcome-sec-btn:hover{
     background-color: #008cff;
+}
+
+@media screen and (max-width: 425px) {
+    #welcome-sec{
+        font-size:smaller;
+    }
+
+    #welcome-sec p{
+        text-align:justify;
+        text-justify:inter-character;
+    }
+
+    #welcome-sec-btn{
+        padding: 5px 10px;
+    }
 }
 
 .goal-img img{
@@ -97,6 +99,18 @@
     color: #0088fd !important;
 }
 
+@media screen and (max-width: 768px) {
+    #goal-sec{
+        font-size:smaller;
+        padding: 1rem!important;
+    }
+
+    .goal-img img{
+        max-width: 70%;
+    }
+}
+
+
 .interested-sec-btns{
 }
 
@@ -111,6 +125,6 @@
     background-size: cover;
 }
 
-.task-container #task-title{
-    min-width: 1rem;
-}
+/*.task-container #task-title{*/
+/*    min-width: 1rem;*/
+/*}*/
