--- a/src/components/LoginSignup/Login/Login.css
+++ b/src/components/LoginSignup/Login/Login.css
@@ -1,7 +1,11 @@
-.form-container{
+.main-container-login{
+    aspect-ratio: 960/300;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-image: url('../../../assets/sec1_full.png');
 }
-
-
 
 @media screen and (max-width: 991px) {
     main{
