--- a/src/components/MainContentPage/MainContentPage.css
+++ b/src/components/MainContentPage/MainContentPage.css
@@ -70,6 +70,11 @@
     background-color: #008cff;
 }
 
+.section-3-link,
+.section-3-link:hover{
+    color: black;
+}
+
 @media screen and (max-width: 425px) {
     #welcome-sec{
         font-size:smaller;
