--- a/src/components/UserMainContent/UserMainContent.css
+++ b/src/components/UserMainContent/UserMainContent.css
@@ -1,12 +1,19 @@
 .user-main-content-container{
-    padding-top:11rem;
+    padding-top:8rem;
 }
 
 .user-name{
-    color: #80e8ff;
-    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.82);
+    color: #50ddff;
+    text-shadow: 2px 1px 1px rgba(0, 0, 0, 0.82);
 }
 
 .latest-tasks h4{
     padding-top:2rem;
+}
+
+
+@media only screen and (max-width: 760px) {
+    .user-main-content-container{
+        padding-top:5rem;
+    }
 }
